# iot-device-manager

./: Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
src/: database.py  main.py  models.py
src/api/: device.py  location.py  user.py
src/repositories/: IRepository.py  device.py  location.py  user.py
src/services/: DeviceService.py  IService.py  LocationService.py  UserService.py  device.py  location.py  user.py
tests/: conftest.py
tests/test_integrationtests/: test_device.py  test_location.py  test_user.py
tests/test_unittests/: test_device_repo.py  test_location_repo.py  test_user_repo.py
